--- a/templates/main.html
+++ b/templates/main.html
@@ -12,14 +12,13 @@
             </span>
             <input id="file-upload"
                    type="file"
-                   name="fileUploaded"
-                   onchange = "angular.element(this).scope().getFile(this.files)"
-            />
+                   name="fileUploaded"/>
+                   <!--onchange = "angular.element(this).scope().getFile(this.files)"-->
+
             <label for="file-upload"
                    id="browse"
                    class="btn browse"
-                   title="选择一个要上传的文件">
-                选择一个要上传的文件</label>
+                   title="选择一个要上传的文件">选择一个要上传的文件</label>
         </div>
         <div class="has-file" style="display: none;">
             <table id="fileInfo">
@@ -28,13 +27,14 @@
                 <tr><td class="colored">文件大小</td><td id="fileSize"></tr>
             </table>
             <div class="buttons">
-                <button class="btn btn-sm btn-info" id="btn-upload" ng-click="uploadFile()">
+                <button class="btn btn-sm btn-info" id="btn-upload">
                     检测
                 </button>
                 <button class="btn btn-warning btn-sm" id="btn-cancel" ng-click="cancelUpload()">
                     取消
                 </button>
             </div>
+            <div id="process"></div>
         </div>
     </div>
 
